--- a/pronto/views/report_stockpicking.xml
+++ b/pronto/views/report_stockpicking.xml
@@ -104,6 +104,8 @@
                             </t>
                         </t>
                     </t>
+                    <br/>
+                    <span t-field="voucher.name"/>
 
                     <!-- <div class="row">
                         <div class="col-12">
