--- a/box/views/box_box_views.xml
+++ b/box/views/box_box_views.xml
@@ -40,6 +40,7 @@
                                 </div>
                                 <div class="content-group mt16">
                                     <field name="journal_ids" colspan="4" nolabel="1" context="{'default_type': 'cash'}" widget="many2many_tags"/>
+                                    <field name="sequence_id" colspan="4" nolabel="0" />
                                 </div>
                             </div>
                       </div>
