--- a/pronto/views/report_stockpicking.xml
+++ b/pronto/views/report_stockpicking.xml
@@ -42,17 +42,23 @@
                     <div class="page">
                         <br/>
                         <br/>
-                        <br/>                                       
+                        <br/>                        
+                        <t t-if="o.partner_id.parent_id">
+                            <t t-set="cliente_id" t-value="o.partner_id.parent_id"/>
+                        </t>
+                        <t t-else="">
+                            <t t-set="cliente_id" t-value="o.partner_id"/>
+                        </t>
                         <div class="row">
                             <div class="col-2">
                             </div>
                             <div class="col-7">
                                 <!-- cliente -->
-                                <span><span t-field="o.partner_id.name"/></span>
+                                <span><span t-field="cliente_id.name"/></span>
                             </div>
                             <div class="col-3">
                                 <!-- IVA -->
-                                <span><span t-field="o.partner_id.afip_responsability_type_id.name" t-options='{"format": "dd/MM/yyyy"}'/></span>
+                                <span><span t-field="cliente_id.afip_responsability_type_id.name" t-options='{"format": "dd/MM/yyyy"}'/></span>
                             </div>
                         </div>
                         <br/>
@@ -60,10 +66,10 @@
                             <div class="col-2">                                    
                             </div>
                             <div class="col-7">
-                                <span><t t-esc="o.partner_id.street" /> - <t t-esc="o.partner_id.city" /></span>
+                                <span><t t-esc="cliente_id.street" /> - <t t-esc="cliente_id.city" /></span>
                             </div>
                             <div class="col-3">
-                                <span><t t-esc="o.partner_id.main_id_number" /> </span>
+                                <span><t t-esc="cliente_id.main_id_number" /> </span>
                             </div>
                         </div>
                         <br/>
@@ -71,7 +77,7 @@
                             <div class="col-2">                                    
                             </div>
                             <div class="col-7">
-                                <span><t t-esc="o.partner_id.mobile" /></span>
+                                <span><t t-esc="cliente_id.mobile" /></span>
                             </div>
                             <div class="col-3">
                                 <span><t t-esc="o.invoice_ids.display_name" /></span>
