--- a/account_payment_credit_card_mgmt/views/account_payment_views.xml
+++ b/account_payment_credit_card_mgmt/views/account_payment_views.xml
@@ -8,33 +8,34 @@
         <field name="arch" type="xml">
             <field name="journal_id" position="after">
                 <field name="is_credit_card" invisible="1" />
-                <field name="tipo_tarjeta_id" attrs="{'invisible': [('is_credit_card', '=', False)]}"/>
-                <field name="nro_tarjeta" attrs="{'invisible': [('is_credit_card', '=', False)]}"/>
+                <field name="plan_tarjeta_id" attrs="{'invisible': [('is_credit_card', '=', False)]}"/>
+                <!-- <field name="nro_tarjeta" attrs="{'invisible': [('is_credit_card', '=', False)]}"/> -->
                 <field name="nro_cupon" attrs="{'invisible': [('is_credit_card', '=', False)]}"/>
-                <field name="cant_cuotas" attrs="{'invisible': [('is_credit_card', '=', False)]}"/>
+                <!-- <field name="cant_cuotas" attrs="{'invisible': [('is_credit_card', '=', False)]}"/> -->
+                <field name="nro_lote" attrs="{'invisible': [('is_credit_card', '=', False)]}"/>
             </field>
 
         </field>
     </record>
 
-    <record id="account_payment_tipo_tarjeta_tree_view" model="ir.ui.view">
-        <field name="name">account.payment.tipo.tarjeta.tree</field>
-        <field name="model">account.payment.tipo.tarjeta</field>
+    <record id="account_payment_plan_tarjeta_tree_view" model="ir.ui.view">
+        <field name="name">account.payment.plan.tarjeta.tree</field>
+        <field name="model">account.payment.plan.tarjeta</field>
         <field name="arch" type="xml">
-		<tree string="Tipo de Tarjeta" >
+		<tree string="plan de Tarjeta" >
 			<field name="name" />
 		</tree>
 	    </field>
 	</record>
 
-    <act_window id="action_tipo_tarjeta"  
-            name="Tipos de Tarjetas"
-            res_model="account.payment.tipo.tarjeta" 
+    <act_window id="action_plan_tarjeta"  
+            name="Planes de Tarjetas"
+            res_model="account.payment.plan.tarjeta" 
             view_mode="tree,form"
             target="current"/>
 
-    <menuitem action="action_tipo_tarjeta" id="menu_tipo_tarjeta" 
-    parent="account.account_management_menu" name="Tipos Tarjetas" sequence="2" />
+    <menuitem action="action_plan_tarjeta" id="menu_plan_tarjeta" 
+    parent="account.account_management_menu" name="Plan Tarjetas" sequence="2" />
 
 
     <record id="view_pagos_tarjeta_tree" model="ir.ui.view">
@@ -46,7 +47,7 @@
                 <field name="display_name"/>
                 <!-- <field name="reference"/> -->
                 <field name="partner_id"/>
-                <field name="tipo_tarjeta_id" />
+                <field name="plan_tarjeta_id" />
                 <field name="nro_tarjeta" />
                 <field name="nro_cupon" />
                 <field name="cant_cuotas" />
@@ -69,7 +70,7 @@
             <!-- <search string="Payments"> -->
             <field name="company_id" position="after">
                 <field name="nro_tarjeta" string="Nro Tarjeta"/>
-                <field name="tipo_tarjeta_id" string="Tipo Tarjeta"/>
+                <field name="plan_tarjeta_id" string="plan Tarjeta"/>
                 <field name="nro_cupon" string="Cupon"/>
             </field>
             <!-- </search> -->
