--- a/box/views/box_box_views.xml
+++ b/box/views/box_box_views.xml
@@ -40,10 +40,21 @@
                                 </div>
                                 <div class="content-group mt16">
                                     <field name="journal_ids" colspan="4" nolabel="1" context="{'default_type': 'cash'}" widget="many2many_tags"/>
-                                    <field name="sequence_id" colspan="4" nolabel="0" />
-                                </div>
+                                </div>        
                             </div>
                       </div>
+                        <div class="col-12 col-lg-6 o_setting_box" id="sesiones">
+                            <div class="o_setting_right_pane">                               
+                                <span class="o_form_label">Secuencia</span>
+                                <div class="text-muted">
+                                    Secuencia numeración sesiones
+                                </div>
+                                <div class="content-group mt16">
+                                    <field name="sequence_id" colspan="4" nolabel="0" />
+                                </div>                                
+                            </div>
+                        </div>
+
                     </div>
                   </sheet>
             </form>
