--- a/box/views/account_payment_views.xml
+++ b/box/views/account_payment_views.xml
@@ -7,6 +7,7 @@
         <field name="inherit_id" ref="account.view_account_payment_form"/>
         <field name="arch" type="xml">
             <field name="journal_id" position="after">
+                <field name="box_id" visible="1" readonly="1"/>
                 <field name="box_session_id" invisible="0" />
             </field>
         </field>
