--- a/box/views/account_payment_views.xml
+++ b/box/views/account_payment_views.xml
@@ -7,10 +7,31 @@
         <field name="inherit_id" ref="account.view_account_payment_form"/>
         <field name="arch" type="xml">
             <field name="journal_id" position="after">
-                <field name="box_id" visible="1" readonly="1"/>
-                <field name="box_session_id" invisible="0" />
+
+                <field name="box_id" readonly="1" attrs="{'invisible' : [('payment_type', '=', 'transfer')]}"/>
+                <field name="box_session_id" readonly="1"  attrs="{'invisible' : [('payment_type', '=', 'transfer')]}"/>
+
             </field>
         </field>
     </record>
+
+    <!-- <record id="view_account_payment_transfer_form" model="ir.ui.view">
+        <field name="name">account.payment.transfer.form</field>
+        <field name="model">account.payment</field>
+        <field name="inherit_id" ref="account_payment_group.view_account_payment_transfer_form"/>
+        <field name="arch" type="xml">
+
+			<field name="box_id" position="attributes">
+                <attribute name="visible">False</attribute>
+            </field>
+
+			<field name="box_session_id" position="attributes">
+                <attribute name="visible">False</attribute>
+            </field>
+
+        </field>
+    </record> -->
+
+
 
 </odoo>
