--- a/pronto/views/product_template_views.xml
+++ b/pronto/views/product_template_views.xml
@@ -17,4 +17,26 @@
         </field>
     </record>
 
+    <record id="product_template_form_view_procurement_button_inherit" model="ir.ui.view">
+        <field name="name">product.template_procurement</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="stock.product_template_form_view_procurement_button"/>
+        <field name="arch" type="xml">
+            <xpath expr="//button[@name='action_view_stock_move_lines']" position="attributes">
+                <attribute name="groups">stock.group_stock_user,pronto.group_stock_sale_user</attribute>
+            </xpath>
+        </field>
+    </record>
+
+    <record id="product_template_form_view_procurement_button_ux_inherit" model="ir.ui.view">
+        <field name="name">product.template_procurement.inherit</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="stock_ux.product_template_form_view_procurement_button"/>
+        <field name="arch" type="xml">
+            <xpath expr="//button[@name='action_view_stock_move']" position="attributes">
+                <attribute name="groups">stock.group_stock_user,pronto.group_stock_sale_user</attribute>
+            </xpath>
+        </field>
+    </record>
+
 </odoo>
