--- a/pronto/views/sale_order_views.xml
+++ b/pronto/views/sale_order_views.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="sale.view_order_form"/>
         <field name="arch" type="xml">
             <xpath expr="//button[@name='action_unlock']" position="attributes">
-                <attribute name="groups">pronto.group_unlock_sale_order</attribute>
+                <attribute name="groups">sales_team.group_sale_manager,pronto.group_unlock_sale_order</attribute>
             </xpath>
             <xpath expr="//group[@name='technical']" position="attributes">
                 <attribute name="groups">base.group_user</attribute>
