--- a/pronto/views/res_partner_views.xml
+++ b/pronto/views/res_partner_views.xml
@@ -41,4 +41,15 @@
         </field>
     </record>
 
+    <record id="view_partner_form_agent_inherit" model="ir.ui.view">
+        <field name="name">res.partner.form.agent</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="sale_commission.view_partner_form_agent"/>
+        <field name="arch" type="xml">
+            <xpath expr="//page[@name='agent_information']" position="attributes">
+                <attribute name="groups">sales_team.group_sale_manager,sales_team.group_sale_salesman</attribute>
+            </xpath>
+        </field>
+    </record>
+
 </odoo>
