--- a/pronto/views/company.xml
+++ b/pronto/views/company.xml
@@ -5,7 +5,8 @@
     <field name="inherit_id" ref="base.view_company_form"/>
     <field name="arch" type="xml">
       <xpath expr="//field[@name='currency_id']" position="after">
-        <field name="stock_delivery_note"/>
+        <!-- <field name="stock_delivery_note"/> -->
+        <field name="product_pricelist_cost_id"/>
       </xpath>
     </field>
   </record>
