--- a/pronto/views/company.xml
+++ b/pronto/views/company.xml
@@ -7,6 +7,7 @@
       <xpath expr="//field[@name='currency_id']" position="after">
         <!-- <field name="stock_delivery_note"/> -->
         <field name="product_pricelist_cost_id"/>
+        <field name="usuario_responsable_reserva_stock_id"/>
       </xpath>
     </field>
   </record>
