- cambio para que bloquee (antes solo avisaba) cuando hay duplicados en product.pricelist.item - decimales en el porcentaje de markup - fecha compromiso obligatoria si el usuario pertenece a un grupo específico

--- a/sale_order_margin_percent_ux/views/sale_order_margin_percent_view.xml
+++ b/sale_order_margin_percent_ux/views/sale_order_margin_percent_view.xml
@@ -6,7 +6,8 @@
         <field name='inherit_id' ref='sale_margin.sale_margin_sale_order'/>
         <field name="arch" type="xml">
             <field name="margin" position="after">
-                <field name="percent" widget="progressbar"/>
+                <!-- <field name="percent" widget="progressbar" digits="get_precision('Product Price')"/> -->
+                <field name="percent"/>
             </field>
         </field>
     </record>
